prod/helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: cdp-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  #ingressClassName: nginx-ingress
  rules:
  - http:
      paths:
      - path: /api/v1/data/admin
        pathType: Prefix
        backend:
          service:
            name: cdp-data-api
            port:
              number: 80
      - path: /api/v1/data/merchant
        pathType: Prefix
        backend:
          service:
            name: cdp-data-api
            port:
              number: 80
      - path: /api/v1/security/merchant
        pathType: Prefix
        backend:
          service:
            name: cdp-security-api
            port:
              number: 80
      - path: /api/v1/security/admin
        pathType: Prefix
        backend:
          service:
            name: cdp-security-api
            port:
              number: 80
      - path: /kafka
        pathType: Prefix
        backend:
          service:
            name: kafka-ui-svc
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cdp-merchant-web
            port:
              number: 80
